--- a/Mission/styles.css
+++ b/Mission/styles.css
@@ -15,22 +15,22 @@ body {
 }
 
 h1 {
-    font-size: 3em; 
+    font-size: 3em;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #000;
     margin-bottom: 20px;
-    white-space: nowrap; 
-    text-align: center; 
+    white-space: nowrap;
+    text-align: center;
 }
 
 h2 {
-    font-size: 1.2em; 
+    font-size: 1.2em;
     text-transform: uppercase;
-    letter-spacing: 1px; 
+    letter-spacing: 1px;
     color: #006EB6;
     margin-bottom: 20px;
-    border-bottom: 2px solid #e0e0e1; 
+    border-bottom: 2px solid #e0e0e1;
     padding-bottom: 10px;
 }
 
@@ -52,8 +52,8 @@ ol li {
 img.logo {
     width: 150px;
     height: auto;
-    margin: 20px auto 0; 
-    display: block; 
+    margin: 20px auto 0;
+    display: block;
 }
 
 
@@ -62,9 +62,9 @@ img.logo {
     color: white;
 }
 
-.dark h2,.dark h1 {
+.dark h2,
+.dark h1 {
     color: #A3C9F1;
 
-    
-}
 
+}
