--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -1,280 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
+:root {
+    --primary-color: #52489c;
+    --secondary-color: #59c3c3;
+    --accent-color: #f45b69;
+    --text-dark: #333;
+    --text-light: #ebebeb;
+    --primary-font: Arial, Helvetica, sans-serif;
+    --headline-font: "Amatic SC", serif;
+    }
+body {
+    font-family: var(--primary-font);
 }
 
-html {
-    height: 100%;
+img {
+    max-width: 100%;
+
 }
 
-.title {
-    font-family: "Amatic SC", sans-serif;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-size: 35px;
+h1, h2, h3, h4, h5 {
+    font-family: var(--headline-font);
 }
 
 header {
-    text-align: center;
-    padding: 20px;
-    background-color: #f8f9fa;
-    border-bottom: 1px solid #e1e1e1;
-}
-
-header img {
-    max-width: 100px;
-    margin-bottom: 10px;
-}
-
-header h1 {
-    color: #333;
-}
-
-form {
-    margin-top: 20px;
-}
-
-input#search,
-button {
-    height: 40px;
-    font-size: 16px;
-    vertical-align: middle;
-    background-color: #f4f4f4;
-    border: 1px solid #e1e1e1;
-    padding: 0 10px;
-}
-
-button {
-    border: none;
-    background: transparent;
-    padding: 0;
-    cursor: pointer;
-}
-
-button img {
-    height: 100%;
-    width: 30px;
-}
-
-/************************
- * Recipe Lists 
- ************************/
-body {
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
+    justify-content: center;
 }
 
-.recipe-card {
-    border: 1px solid #ccc;
-    padding: 16px;
-    margin: 16px;
+header > img {
+    height: 80px;
 }
 
-.recipe-card img {
-    max-width: 100%;
-    height: auto;
-    padding: 15px;
+#title {
+    font-size: 3em;
 }
 
-.recipe__decsription {
-    display: none;
-}
-
-span {
-    margin: 5px;
-    font-weight: bold;
-}
-
-.tags {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    margin-bottom: 16px;
-}
-
-.tag {
-    background-color: #4874a3;
-    color: #ffffff;
-    padding: 10px 10px;
-    border-radius: 12px;
-    font-size: 15px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.tag:hover {
-    background-color: #0056b3;
-}
-
-/************************
- * Footer
- ************************/
 footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-top: 1px solid #e1e1e1;
-    margin-top: auto;
+    margin: 2em 0;
+    
 }
 
-footer .social a {
-    margin: 0 10px;
+.social {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
 }
 
-footer .social img {
+.social > .link-img {
+    display: flex;
+    gap: .5em;
+    grid-row: 1/2;
+}
+
+.social > .link-img > a {
     width: 40px;
-    height: 40px;
 }
 
-footer a {
-    color: #3b4fc1;
-    text-decoration: none;
-    font-size: 14px;
+#search-bar {
+    display: flex;
+    justify-content: center;
+    border-bottom-style: solid;
+    border-width: 2px;
+    padding-bottom: 1em;
+    border-color: lightgray;
 }
 
-footer a:hover {
-    text-decoration: underline;
+#search-bar > input {
+    height: 50px;
+    width: 75%;
+    padding: 0;
+    /* border-top-left-radius: 10px; */
+    border-radius: 10px 0 0 10px;
+    border-style: solid;
+    padding-left: 5px;
 }
 
-@media screen and (min-width: 768px) {
+#search-bar > #submit{
+    width: 54px;
+    height: 54px;
+    border-radius: 0 10px 10px 0;
+    border-style: solid;
+    border-color: rgb(118, 118, 118);
+    border-left-style: none;
+}
 
-    /************************
-     * Header
-     ************************/
-    header img {
-        max-width: 100px;
-        margin-bottom: 0;
+.recipe {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 1em;
+    gap: 1em;
+    justify-items: center;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+.recipe-tags {
+    display: flex;
+    padding-left: 0;
+    list-style-type: none;
+    gap: 1em;
+}
+
+.recipe-tags > li {
+    border-width: 1px;
+    border-style: solid;
+    padding: .4em .5em;
+}
+
+@media screen and (min-width: 600px) {
+    .recipe {
+        grid-template-columns: 1fr 1fr;
     }
 
-    header h1 {
-        margin-left: 20px;
+    .social {
+        grid-template-columns: 1fr 1fr;
+        justify-items: start;
+        margin: 0 2em 0 2em;
     }
 
-    form {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    input#search {
-        width: 100%;
-    }
-
-    button {
-        height: 40px;
-        font-size: 16px;
-        vertical-align: middle;
-        background-color: #f4f4f4;
-        border: 1px solid #e1e1e1;
-        padding: 0 10px;
-    }
-
-    button img {
-        height: 100%;
-        width: 30px;
-    }
-
-
-
-    /************************
-     * Footer
-     ************************/
-    footer .social a {
-        margin: 0 10px;
-    }
-
-    footer .social img {
-        width: 40px;
-        height: 40px;
-    }
-
-    footer a {
-        color: #3b4fc1;
-        text-decoration: none;
-        font-size: 14px;
+    .social > .link-img {
+        grid-column: 2/3;
+        justify-self: end;
     }
 }
 
-@media screen and (min-width: 1024px) {
-
-    /************************
-     * Recipe Lists 
-     ************************/
-
-    .tags {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 8px;
-        margin-bottom: 16px;
-    }
-
-    .tag {
-        background-color: #4874a3;
-        color: #ffffff;
-        padding: 15px 15px;
-        border-radius: 12px;
-        font-size: 15px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .tag:hover {
-        background-color: #0056b3;
-    }
-
-    .recipe-card {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .recipe__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .recipe__content h2 {
-        font-size: 34px;
-    }
-
-    .recipe__content p {
-        font-size: 20px;
-    }
-
-    .recipe__decsription {
-        display: block;
-    }
-
-    /************************
-     * Footer
-     ************************/
-    footer a {
-        float: left;
-    }
-
-    footer .social {
-        display: flex;
-        justify-content: center;
-        float: right;
-    }
-
-    footer .social a {
-        margin: 0 10px;
-    }
-
-    footer .social img {
-        width: 40px;
-        height: 40px;
+@media screen and (min-width: 960px) {
+    body {
+        max-width: 960px;
+        margin: 8px auto;
     }
 }
